tests/fixtures/invalid/bytes_bitor_bytes.py
# Cannot bitwise OR Bytes and Bytes
x: bytes = b"hello" | b"hello"
